--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "polymer-ui-menu-button": "Polymer/polymer-ui-menu-button#master",
     "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item#master",
     "polymer-ui-menu": "Polymer/polymer-ui-menu#master",
-    "polymer-ui-pages": "Polymer/polymer-ui-pages#master"
+    "polymer-ui-pages": "Polymer/polymer-ui-pages#master",
+    "polymer-ui-base-css": "Polymer/polymer-ui-base-css#master"
   }
 }
