--- a/bower.json
+++ b/bower.json
@@ -2,23 +2,24 @@
   "name": "book-search",
   "private": true,
   "dependencies": {
-    "platform": "Polymer/platform#master",
-    "polymer-jsonp": "Polymer/polymer-jsonp#master",
-    "polymer-selector": "Polymer/polymer-selector#master",
-    "polymer-grid-layout": "Polymer/polymer-grid-layout#master",
-    "polymer-flex-layout": "Polymer/polymer-flex-layout#master",
-    "polymer-localstorage": "Polymer/polymer-localstorage#master",
-    "polymer-ui-toolbar": "Polymer/polymer-ui-toolbar#master",
-    "polymer-ui-icon": "Polymer/polymer-ui-icon#master",
-    "polymer-ui-icon-button": "Polymer/polymer-ui-icon-button#master",
-    "polymer-ui-field": "Polymer/polymer-ui-field#master",
-    "polymer-ui-collapsible": "Polymer/polymer-ui-collapsible#master",
-    "polymer-ui-card": "Polymer/polymer-ui-card#master",
-    "polymer-ui-ratings": "Polymer/polymer-ui-ratings#master",
-    "polymer-ui-menu-button": "Polymer/polymer-ui-menu-button#master",
-    "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item#master",
-    "polymer-ui-menu": "Polymer/polymer-ui-menu#master",
-    "polymer-ui-pages": "Polymer/polymer-ui-pages#master",
-    "polymer-ui-base": "Polymer/polymer-ui-base#master"
-  }
+    "platform": "Polymer/platform#0.1.3",
+    "polymer-jsonp": "Polymer/polymer-jsonp#0.1.3",
+    "polymer-selector": "Polymer/polymer-selector#0.1.3",
+    "polymer-grid-layout": "Polymer/polymer-grid-layout#0.1.3",
+    "polymer-flex-layout": "Polymer/polymer-flex-layout#0.1.3",
+    "polymer-localstorage": "Polymer/polymer-localstorage#0.1.3",
+    "polymer-ui-toolbar": "Polymer/polymer-ui-toolbar#0.1.3",
+    "polymer-ui-icon": "Polymer/polymer-ui-icon#0.1.3",
+    "polymer-ui-icon-button": "Polymer/polymer-ui-icon-button#0.1.3",
+    "polymer-ui-field": "Polymer/polymer-ui-field#0.1.3",
+    "polymer-ui-collapsible": "Polymer/polymer-ui-collapsible#0.1.3",
+    "polymer-ui-card": "Polymer/polymer-ui-card#0.1.3",
+    "polymer-ui-ratings": "Polymer/polymer-ui-ratings#0.1.3",
+    "polymer-ui-menu-button": "Polymer/polymer-ui-menu-button#0.1.3",
+    "polymer-ui-menu-item": "Polymer/polymer-ui-menu-item#0.1.3",
+    "polymer-ui-menu": "Polymer/polymer-ui-menu#0.1.3",
+    "polymer-ui-pages": "Polymer/polymer-ui-pages#0.1.3",
+    "polymer-ui-base": "Polymer/polymer-ui-base#0.1.3"
+  },
+  "version": "0.1.3"
 }
